flex/flex-tests/testData/js2_highlighting/CreateExtendsFix1.js2
package {

public class CreateExtendsFix1 {
  public function foo() {
    var v : C = <error descr="Initializer type CreateExtendsFix1 is not assignable to variable type C">new CreateExtendsFix1()</error>;
  }
}
}

<error descr="Package should be first statement in file">package</error> {
  public class <error descr="Class 'C' should be defined in file 'C.js2'">C</error> {}

}